[gd_scene load_steps=2 format=3 uid="uid://c1item_pickup_ui"]

[ext_resource type="Script" path="res://scripts/equipment/item_pickup_ui.gd" id="1_script"]

[node name="ItemPickupUI" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.02, 0.05, 0.85)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -220.0
offset_right = 375.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainVBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MainVBox"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="ItemDisplay" type="VBoxContainer" parent="Panel/MainVBox/HBoxContainer"]
custom_minimum_size = Vector2(312, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0
theme_override_constants/separation = 6

[node name="VSeparator" type="VSeparator" parent="Panel/MainVBox/HBoxContainer"]
layout_mode = 2

[node name="ComparisonDisplay" type="VBoxContainer" parent="Panel/MainVBox/HBoxContainer"]
custom_minimum_size = Vector2(312, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.0
theme_override_constants/separation = 6

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/MainVBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="EquipButton" type="Button" parent="Panel/MainVBox/ButtonContainer"]
custom_minimum_size = Vector2(130, 44)
layout_mode = 2
text = "EQUIP [E]"

[node name="PickupButton" type="Button" parent="Panel/MainVBox/ButtonContainer"]
custom_minimum_size = Vector2(130, 44)
layout_mode = 2
text = "TAKE [P]"
